# rdf-mcp

./: .gitignore  pyproject.toml
graframe/: graframe_server.py  lexicon.json  lexicon_builder.py  matcher.py  query.py  query_graph.py
rdf_mcp/servers/: brick_server2.py
