[project]
name = "rdf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
    "mcp[cli]>=1.6.0",
    "oxrdflib>=0.4.0",
    "rdflib>=7.1.4",
]

#[tool.uv.sources]
#ollama-mcp-client = { path = "ollama-mcp-client" }
[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
]
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pytest.ini_options]
minversion = "8.1.0"
addopts = "--cov=. --cov-report=term-missing"
testpaths = ["tests"]

[project.scripts]
s223-server = "rdf_mcp.servers.s223_server:main"
brick-server = "rdf_mcp.servers.brick_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdf_mcp*"]
